--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
 :root {
-    --dark-blue-background: #1f2937;
+    --dark-blue: #1f2937;
     --soft-blue: #3882f6;
     --light-grey: #e5e7eb;
     --strong-white: #f9faf8;
-    --strong-black: #1f2937;
 }   
 
 * {
@@ -24,7 +23,7 @@ a {
 
 .header {
     color: var(--strong-white);
-    background: var(--dark-blue-background);
+    background: var(--dark-blue);
 
     font-size: 24px;
 
@@ -39,7 +38,7 @@ a {
 }
 
 .hero-section {
-    background: var(--dark-blue-background);
+    background: var(--dark-blue);
     color: var(--strong-white);
 }
 
@@ -85,6 +84,7 @@ button {
     width: 80%;
     padding: 32px;
     margin: 0 auto;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -95,4 +95,39 @@ button {
 .hero-section 
 .container {
     justify-content: center;
+}
+
+.info-header {
+    font-size: 36px;
+    font-weight: 900;
+    color: var(--dark-blue);
+}
+
+.info-section
+.container {
+    flex-direction: column;
+}
+
+.info-list {
+    display: flex;
+    justify-content: center;
+    gap: 64px;
+}
+
+.info-list
+li {
+    color: var(--dark-blue);
+    
+    font-size: 18px;
+    text-align: center;
+    
+    width: 240px;
+}
+
+.info-list
+img {
+    border: 4px solid var(--soft-blue);
+    border-radius: 10px;
+    width: 240px;
+    height: auto;
 }
