--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
     font-family: Roboto, sans-serif;
     margin: 0;
     padding: 0;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 ul {
@@ -21,6 +21,20 @@ a {
     text-decoration: none;
 }
 
+.container {
+    border: solid green;
+    width: 70%;
+    max-width: 1920px;
+    padding: 32px;
+    margin: 0 auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 64px;
+    flex-wrap: wrap;
+}
+
 .header {
     color: var(--strong-white);
     background: var(--dark-blue);
@@ -28,6 +42,11 @@ a {
     font-size: 24px;
 
     padding: 32px auto;
+}
+
+.header
+.container {
+    justify-content: space-between;
 }
 
 .header-links {
@@ -77,25 +96,6 @@ button {
     flex: 1 1 600px;
     max-width: 50%;
     height: auto;
-}
-
-.container {
-    border: solid green;
-    width: 70%;
-    max-width: 1920px;
-    padding: 32px;
-    margin: 0 auto;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 64px;
-    flex-wrap: wrap;
-}
-
-.hero-section 
-.container {
-    justify-content: center;
 }
 
 .info-header {
@@ -152,5 +152,33 @@ img {
     color: var(--dark-blue);
     font-size: 18px;
     font-weight: bold;
-    text-align: right;;
+    text-align: right;
+}
+
+.action-box {
+    background: var(--soft-blue);
+    border-radius: 10px;
+
+    padding: 64px 128px;
+
+    display: flex;
+    gap: 20em;
+    /* justify-content: center; */
+    /* align-items: center; */
+}
+
+.action-maintext {
+    color: var(--strong-white);
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.action-subtext {
+    color: var(--light-grey);
+    font-size: 18px;
+}
+
+.action-box 
+button {
+    border: 2px solid var(--strong-white);
 }
