--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@
     font-family: Roboto, sans-serif;
     margin: 0;
     padding: 0;
-    /* border: 1px solid red; */
 }
 
 ul {
@@ -22,7 +21,7 @@ a {
 }
 
 .container {
-    border: solid green;
+    /* border: solid green; */
     width: 70%;
     max-width: 1920px;
     padding: 32px;
@@ -163,8 +162,6 @@ img {
 
     display: flex;
     gap: 20em;
-    /* justify-content: center; */
-    /* align-items: center; */
 }
 
 .action-maintext {
@@ -181,4 +178,12 @@ img {
 .action-box 
 button {
     border: 2px solid var(--strong-white);
+}
+
+.footer {
+    background: var(--dark-blue);;
+    color: var(--light-grey);
+
+    font-size: 18px;
+    text-align: center;
 }
