--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@ a {
 }
 
 .container {
-    /* border: solid green; */
     width: 70%;
     max-width: 1920px;
     padding: 32px;
@@ -35,12 +34,14 @@ a {
 }
 
 .header {
-    color: var(--strong-white);
-    background: var(--dark-blue);
-
-    font-size: 24px;
-
+    /* background: var(--dark-blue); */
     padding: 32px auto;
+}
+
+.header-logo {
+    color: var(--soft-blue);
+    font-size: 32px;
+    font-weight: 900;
 }
 
 .header
@@ -88,7 +89,9 @@ button {
     width: 150px;
 
     border-radius: 10px;
-    padding: 8px 16px;;
+    padding: 8px 16px;
+
+    flex: 0 0 150px;
 }
 
 .hero-image {
@@ -111,6 +114,7 @@ button {
 .info-list {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 64px;
 }
 
@@ -126,7 +130,7 @@ li {
 
 .info-list
 img {
-    border: 4px solid var(--soft-blue);
+    border: 6px solid var(--soft-blue);
     border-radius: 10px;
     width: 240px;
     height: auto;
@@ -161,6 +165,8 @@ img {
     padding: 64px 128px;
 
     display: flex;
+    align-items: center;
+
     gap: 20em;
 }
 
