--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,18 @@
 :root {
     --dark-blue: #1f2937;
-    --soft-blue: #3882f6;
-    --light-grey: #e5e7eb;
+    --soft-blue: rgb(56, 186, 246);
+    --grad-blue: linear-gradient(90deg,#5FDCF0, #2AC6FE, #4FA1F0);
+;
+    --light-grey: rgb(229, 231, 235);
+    --light-grey-rgb: 206, 207, 209;
+
     --strong-white: #f9faf8;
+
+    --light-black: rgb(17, 17, 17);
 }   
 
 * {
-    font-family: Roboto, sans-serif;
+    font-family: "Noto Sans JP", sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -16,7 +22,7 @@ ul {
 }
 
 a {
-    color: var(--light-grey);
+    color: var(--light-black);
     text-decoration: none;
 }
 
@@ -50,26 +56,38 @@ a {
 }
 
 .header-links {
-    display: flex;
+    background-color: rgba(var(--light-grey-rgb), 0.3);
 
-    font-size: 18px;
+    font-size: 24px;
+    font-weight: bold;
+    
+    padding: 16px 64px;
+
+    border: 4px solid white;
+    border-radius: 100px;
+
+    display: flex;
+    align-items: center;
     gap: 64px;
 }
 
 .hero-section {
     background: var(--dark-blue);
-    color: var(--strong-white);
+}
+
+.hero-maintext {
+    color: var(--light-black);
 }
 
 .hero-text {
     flex: 1 1 600px;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    text-align: center;
 }
 
 .hero-subtext {
-    color: var(--light-grey);
+    color: var(--light-black);
     font-size: 18px;
     font-weight: 400;
     margin: 0 0 16px;
